discussion/kv_engine/155459/155459_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WTF

Change-Id: I3552fcdbf303928bde2504f581bada30c9c07254

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-09 14:27:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 15:06:08.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9679/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9679/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10327/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10327/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11254/ : FAILURE

Compile error at [2021-06-09T14:29:03.016Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11254/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11402/ : FAILURE

Compile error at [2021-06-09T14:32:11.005Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11402/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8275/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36641/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/215/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31313/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11673/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19258/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2021-06-11 15:47:56.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
